--- a/index.html
+++ b/index.html
@@ -1,25 +1,52 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>A-Frame 3D</title>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>3D Forest Garden </title>
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-    <style>
-      body { margin: 0; }
-      canvas { display: block; }
-    </style>
-  </head>
-  <body>
-    <a-scene>
-        <a-sky color="#e0e0e0"></a-sky>
+</head>
+<body>
 
-            <a-light type="ambient" color="#fff"></a-light>
-      <a-light type="directional" position="-1 1 1" intensity="0.5"></a-light>
+<a-scene>
+    <a-sky color="#87CEEB"></a-sky>
 
-      <a-box position="0 1 -3" rotation="0 45 0" color="#4CC3D2" animation="property: rotation; to: 0 405 0; loop: true; dur: 3000"></a-box>
+    <a-plane position="0 0 -5" rotation="-90 0 0" width="50" height="50" color="#228B22"></a-plane>
 
-      <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
+    <a-cylinder position="-4 1 -5" radius="0.2" height="4" color="#8B4513"></a-cylinder>
+      <a-sphere position="-4 3 -5" radius="1.2" color="#00FF00"></a-sphere>
 
-      <a-entity camera look-controls position="0 1.6 0"></a-entity>
-    </a-scene>
-  </body>
+    <a-cylinder position="-1 1 -6" radius="0.2" height="4" color="#8B4513"></a-cylinder>
+    <a-sphere position="-1 3 -6" radius="1.2" color="#00FF00"></a-sphere>
+
+    <a-cylinder position="2 1 -5" radius="0.2" height="4" color="#8B4513"></a-cylinder>
+    <a-sphere position="2 3 -5" radius="1.2" color="#00FF00"></a-sphere>
+
+    <a-cylinder position="4 1 -6" radius="0.2" height="4" color="#8B4513"></a-cylinder>
+    <a-sphere position="4 3 -6" radius="1.2" color="#00FF00"></a-sphere>
+
+    <a-sphere position="-3 0.5 -4" radius="0.5" color="#4CAF50"></a-sphere>
+       <a-sphere position="-2 0.5 -4" radius="0.5" color="#4CAF50"></a-sphere>
+    <a-sphere position="-1 0.5 -4" radius="0.5" color="#4CAF50"></a-sphere>
+
+    <a-sphere position="1 0.5 -4" radius="0.5" color="#4CAF50"></a-sphere>
+      <a-sphere position="2 0.5 -4" radius="0.5" color="#4CAF50"></a-sphere>
+    <a-sphere position="3 0.5 -4" radius="0.5" color="#4CAF50"></a-sphere>
+
+    <a-cylinder position="-2 0.5 -2" radius="0.05" height="1" color="#228B22"></a-cylinder>
+        <a-sphere position="-2 1 -2" radius="0.2" color="#FF69B4"></a-sphere>
+
+    <a-cylinder position="1 0.5 -3" radius="0.05" height="1" color="#228B22"></a-cylinder>
+    <a-sphere position="1 1 -3" radius="0.2" color="#FF69B4"></a-sphere>
+
+    <a-cylinder position="0 0.5 -2" radius="0.05" height="1" color="#228B22"></a-cylinder>
+    <a-sphere position="0 1 -2" radius="0.2" color="#FF69B4"></a-sphere>
+
+    <a-cylinder position="-3 0.5 -3" radius="0.05" height="1" color="#228B22"></a-cylinder>
+         <a-sphere position="-3 1 -3" radius="0.2" color="#FF69B4"></a-sphere>
+
+    <a-entity camera look-controls position="0 2 10"></a-entity>
+</a-scene>
+
+</body>
 </html>
